Fix to database connections

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ bootstrap/cache/
 .env.php
 .env
 
+vendor/
+
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
