--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/tests/TestCase.php",
+			"app/composers"
 		]
 	},
 	"repositories": [
-			
+
 	],
 	"scripts": {
 		"post-install-cmd": [
